--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,8 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -15,19 +14,24 @@
     "@firebase/auth": "^1.7.9",
     "@gluestack-ui/avatar": "^0.1.17",
     "@gluestack-ui/themed": "^1.1.50",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.0.1",
-    "@react-native-firebase/app": "^20.5.0",
-    "@react-native-firebase/auth": "^20.5.0",
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/auth": "^17.4.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "@rneui/base": "^4.0.0-rc.7",
     "app": "file:",
-    "expo": "~51.0.28",
-    "expo-dev-client": "~4.0.26",
+    "expo": "^45.0.8",
+    "expo-dev-client": "~4.0.27",
+    "expo-firebase-analytics": "^4.1.0",
+    "expo-firebase-auth": "^2.0.0",
+    "expo-firebase-core": "^3.1.0",
+    "expo-firebase-recaptcha": "^1.4.4",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.13.2",
+    "firebase": "^10.14.0",
     "lunar-calendar": "^0.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -37,6 +41,7 @@
     "react-native-otp-entry": "^1.7.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "11.18.1",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
