--- a/web/package.json
+++ b/web/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-tailwindcss-datepicker": "^1.7.2",
-    "vietnamese-lunar-calendar": "^0.0.6"
+    "vietnamese-lunar-calendar": "^0.0.6",
+    "web": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
