--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,8 @@
     "lunar-javascript": "^1.6.12",
     "moment": "^2.30.1",
     "moment-lunar": "^0.0.4",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.8.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
@@ -33,8 +35,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-tailwindcss-datepicker": "^1.7.2",
-    "vietnamese-lunar-calendar": "^0.0.6",
-    "web": "file:"
+    "vietnamese-lunar-calendar": "^0.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
