--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "express": "^4.19.2",
     "firebase-admin": "^12.5.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "mongodb": "^6.9.0",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
