--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "lunar-javascript": "^1.6.12",
     "moment": "^2.30.1",
     "moment-lunar": "^0.0.4",
+    "moment-timezone": "^0.5.46",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "prop-types": "^15.8.1",
@@ -38,13 +39,17 @@
     "vietnamese-lunar-calendar": "^0.0.6"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.25.9",
     "@eslint/js": "^9.9.0",
+    "@types/node": "^22.8.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
     "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "vite": "^5.4.1"
