--- a/ticket_app/package.json
+++ b/ticket_app/package.json
@@ -14,13 +14,15 @@
     "@react-native-firebase/app": "^21.0.0",
     "@react-native-firebase/auth": "^21.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "eas-cli": "^12.5.3",
     "expo": "~51.0.28",
     "expo-dev-client": "~4.0.28",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "jwt-decode": "^4.0.0",
     "lunar-calendar": "^0.1.4",
     "react": "18.2.0",
     "react-native": "0.74.5",
@@ -28,9 +30,9 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-otp-entry": "^1.7.2",
+    "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-select-dropdown": "^4.0.1",
     "react-native-toast-message": "^2.2.1",
     "undefined": "react-native-async-storage/async-storage"
   },
