--- a/ticket_app/package.json
+++ b/ticket_app/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.4.1",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
     "eas-cli": "^12.5.3",
     "expo": "~51.0.28",
@@ -24,6 +25,7 @@
     "expo-status-bar": "~1.12.1",
     "jwt-decode": "^4.0.0",
     "lunar-calendar": "^0.1.4",
+    "moment-timezone": "^0.5.46",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
