--- a/backend/package.json
+++ b/backend/package.json
@@ -14,17 +14,20 @@
     "@aws-sdk/client-s3": "^3.670.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
+    "config": "^3.3.12",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.5.0",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "mongodb": "^6.9.0",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1"
+    "multer-s3": "^3.0.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
