--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.670.0",
+    "@payos/node": "^1.0.10",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
