--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "prop-types": "^15.8.1",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-datepicker": "^7.3.0",
