--- a/web/package.json
+++ b/web/package.json
@@ -36,9 +36,11 @@
     "react-calendar": "^5.0.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1",
+    "react-router-dom": "^7.0.1",
     "react-tailwindcss-datepicker": "^1.7.2",
-    "vietnamese-lunar-calendar": "^0.0.6"
+    "socket.io-client": "^4.8.1",
+    "vietnamese-lunar-calendar": "^0.0.6",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.9",
