--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
