--- a/ticket_app/package.json
+++ b/ticket_app/package.json
@@ -33,10 +33,13 @@
     "react-native-gesture-handler": "^2.20.0",
     "react-native-otp-entry": "^1.7.2",
     "react-native-pager-view": "6.3.0",
+    "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.1",
-    "undefined": "react-native-async-storage/async-storage"
+    "socket.io-client": "^4.8.1",
+    "undefined": "react-native-async-storage/async-storage",
+    "expo-linking": "~6.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
