--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,13 @@
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
+    "bull": "^4.16.4",
     "config": "^3.3.12",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.5.0",
+    "ioredis": "^5.4.1",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
