--- a/web/package.json
+++ b/web/package.json
@@ -38,9 +38,11 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "react-tailwindcss-datepicker": "^1.7.2",
+    "recharts": "^2.14.1",
     "socket.io-client": "^4.8.1",
     "vietnamese-lunar-calendar": "^0.0.6",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.9",
