--- a/ticket_app/package.json
+++ b/ticket_app/package.json
@@ -22,6 +22,7 @@
     "expo": "~51.0.28",
     "expo-dev-client": "~4.0.28",
     "expo-image-picker": "~15.0.7",
+    "expo-linking": "~6.3.1",
     "expo-status-bar": "~1.12.1",
     "jwt-decode": "^4.0.0",
     "lunar-calendar": "^0.1.4",
@@ -36,10 +37,10 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-tab-view": "^4.0.5",
     "react-native-toast-message": "^2.2.1",
     "socket.io-client": "^4.8.1",
-    "undefined": "react-native-async-storage/async-storage",
-    "expo-linking": "~6.3.1"
+    "undefined": "react-native-async-storage/async-storage"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
