--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,8 +12,11 @@ services:
       - ./backend:/app
     environment:
       - PORT=5000
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     depends_on:
       - mongo
+      - redis
 
   frontend:
     build:
@@ -31,5 +34,16 @@ services:
     volumes:
       - mongo-data:/data/db
 
+  redis:
+    image: redis:6.2
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+
+    
+
 volumes:
   mongo-data:
+  redis-data:
