--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "request": "^2.88.2",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.3",
