--- a/ticket_app/package.json
+++ b/ticket_app/package.json
@@ -32,6 +32,7 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-otp-entry": "^1.7.2",
     "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.5",
